# tash

./: experiments.ipynb  local.db-shm  local.db-wal  pyproject.toml
src/tash/: __init__.py  __main__.py  app.py  demo.tcss
